# dbctx

./: .gitignore  README.md  pyproject.toml
docs/: skill-publishing.md
skill/dbctx/: SKILL.md
skill/dbctx/agents/: openai.yaml
skill/dbctx/references/: cli.md  setup.md
src/dbctx/: cli.py  config.py  models.py  mysql.py  render.py  snapshot.py
src/dbctx/review/: __init__.py  result.py  rules.py
src/dbctx/templates/: SKILL.md  dbctx-agent-usage.md  dbctx.yml
tests/: test_cli.py  test_mysql_dsn.py  test_review.py
