[project]
name = "dbctx"
version = "0.1.0"
description = "AI-friendly database context CLI for backend coding agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7",
    "pymysql>=1.1",
    "pyyaml>=6.0",
    "rich>=13.7",
    "sqlglot>=25.0",
    "typer>=0.12",
]

[project.scripts]
dbctx = "dbctx.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbctx"]
